# CppNeural

./: CMakeLists.txt  README.md
src/: BaseLayer.cpp  BaseLayer.h  CMakeLists.txt  ConvLayer.cpp  DenseLayer.cpp  NormLayer.cpp  NormLayer.h  helpers.h
src/circle_demo/: CMakeLists.txt  README.md
src/circle_demo/scripts/: plot.py
src/circle_demo/src/: CircleSimulator.cpp  CircleSimulator.h  CircleSystem.cpp  CircleSystem.h  MainWindow.cpp  MainWindow.h  Network.h  generate_circle.cpp  main.cpp  types.h
src/cpp_bptt_lib/: CMakeLists.txt  README.md
src/cpp_bptt_lib/src/: Generator.cpp  Generator.h  Simulator.h  SimulatorAD.cpp  SimulatorAD.h  SimulatorADAD.cpp  SimulatorADAD.h  SimulatorF.cpp  SimulatorF.h  System.h  cpp_bptt.h  generate_code.cpp  solver.hpp
src/cpp_bptt_lib/test/: SimpleSystem.cpp  SimpleSystem.h  SimulatorSimpleSystem.cpp  SimulatorSimpleSystem.h  generate_simple_system.cpp  test_SimpleSystem.cpp
src/cpp_neural_lib/: BaseLayer.cpp  CMakeLists.txt  ConvLayer.h  FinalLayer.h  RecurrentLayer.cpp  cpp_neural.h  helpers.cpp
src/cpp_neural_lib/src/: BaseLayer.cpp  BaseLayer.h  CSVHandler.cpp  CSVHandler.h  ConvLayer.cpp  ConvLayer.h  DenseLayer.cpp  DenseLayer.h  FinalLayer.cpp  FinalLayer.h  NormLayer.cpp  NormLayer.h  RecurrentLayer.cpp  RecurrentLayer.h  cpp_neural.h  helpers.cpp  helpers.h
src/cpp_neural_lib/src/types/: Scalars.h  Tensors.h
src/types/: Scalars.h
test/: CMakeLists.txt  test_ConvLayer.cpp  test_NormLayer.cpp
